# canny_edge_detection

./: .gitignore  CMakeLists.txt  GrabCut.cpp  GrabCutDLLEntrypoint.cpp  GrabCutWrapper.cpp  LICENSE  README.md  azure-pipelines.yml  canny_edge_detection.py  grabcut_edge_detection.cpp  requirements.txt  vcpkg.json
.github/workflows/: build.yml
includes/: GrabCut.hpp  GrabCutAlgorithm.hpp  GrabCutWrapper.hpp
scripts/: apply-patch-and-install.ps1
